--- a/src/app/shared/components/shipment-policy/shipment-policy.component.html
+++ b/src/app/shared/components/shipment-policy/shipment-policy.component.html
@@ -1,1 +1,8 @@
-<p>shipment-policy works!</p>
+<div class="shipping-policy-container">
+  <h1 class="title">Shipping & Delivery Policy</h1>
+
+  <div class="section" *ngFor="let section of policySections" [@fadeIn]>
+    <h2 class="section-title">{{ section.title }}</h2>
+    <p class="section-content">{{ section.content }}</p>
+  </div>
+</div>
