--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -1,4 +1,8 @@
 $primary-color: #682F12;
 $secondary-color: #99663D;
 $white-color: #fff;
+$black-color: #000;
 $light-gray: #f4f4f4;
+
+//background
+$background-color: $secondary-color
