--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('/src/app/shared/styles/_font.scss');
+@import "primeicons/primeicons.css";
+
+@font-face {
+  font-family: 'Nunito-Regular';
+  src: url('assets/fonts/Nunito-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Nunito-Bold';
+  src: url('assets/fonts/Nunito-Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Nunito-Light';
+  src: url('assets/fonts/Nunito-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Nunito-SemiBold';
+  src: url('assets/fonts/Nunito-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Nunito-ExtraBold';
+  src: url('assets/fonts/Nunito-ExtraBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Nunito-Italic';
+  src: url('assets/fonts/Nunito-Italic.ttf') format('truetype');
+}
+
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
   font-family: 'Nunito-Regular', sans-serif;
 }
+
+input::placeholder {
+  font-family: "Nunito-Regular", sans-serif;
+}
+
 
