--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,68 @@
-<p>footer works!</p>
+<!-- Footer Component -->
+<footer class="footer-container">
+  <!-- Footer Top Section -->
+  <div class="footer-top">
+    <!-- Get to Know Us Section -->
+    <div class="footer-section company-info">
+      <h4>Kalagura Gampa</h4>
+      <p>Address Line 1</p>
+      <p>Address Line 2</p>
+      <p>Phone Number</p>
+      <div class="payment-icons">
+        <!-- Accepted Payment Methods -->
+        <img src="assets/paypal.svg" alt="PayPal" />
+        <img src="assets/visa.svg" alt="Visa" />
+        <img src="assets/amex.svg" alt="AMEX" />
+        <img src="assets/stripe.svg" alt="Stripe" />
+      </div>
+    </div>
+
+    <!-- Quick Links Section -->
+    <div class="footer-section">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">F.A.Q's</a></li>
+        <li><a href="#">Tracking Orders</a></li>
+      </ul>
+    </div>
+
+    <!-- Policy Section -->
+    <div class="footer-section">
+      <h4>Policy</h4>
+      <ul>
+        <li><a href="#">Refund</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Shipping</a></li>
+        <li><a href="#">Terms of Services</a></li>
+      </ul>
+    </div>
+
+    <!-- Stores Section -->
+    <div class="footer-section">
+      <h4>Stores</h4>
+      <ul>
+        <li>Aziz Nagar</li>
+        <li>L.B. Nagar</li>
+        <li>Kukatpally</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Footer Bottom Section -->
+  <div class="footer-bottom">
+    <div class="footer-left">
+      <p>Copyright 2023 Kalagura Gampa (a Gayathri Enterprises) All Rights Reserved.</p>
+    </div>
+    <div class="footer-right">
+      <div class="social-links">
+        <p>Follow us on</p>
+        <a href="https://twitter.com" target="_blank" class="social-icon"><i class="pi pi-twitter"></i></a>
+        <a href="https://facebook.com" target="_blank" class="social-icon"><i class="pi pi-facebook"></i></a>
+        <a href="https://youtube.com" target="_blank" class="social-icon"><i class="pi pi-youtube"></i></a>
+        <a href="https://instagram.com" target="_blank" class="social-icon"><i class="pi pi-instagram"></i></a>
+      </div>
+    </div>
+  </div>
+</footer>
