--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -8,7 +8,8 @@
   .top-bar {
     display: flex;
     justify-content: space-between;
-    padding: 10px 20px;
+    // padding: 10px 10px;
+    align-items: center;
     background-color: $primary-color;
     color: white;
 
@@ -52,6 +53,7 @@
 
     li {
       margin: 0 15px;
+
       a {
         text-decoration: none;
         // color: $primary-color;
@@ -82,6 +84,7 @@
         position: absolute;
         top: 8px;
         right: 7px;
+        color: #5d5a5a;
       }
     }
 
@@ -91,7 +94,7 @@
 
       a {
         text-decoration: none;
-        // color: grey !important;
+        color: #5d5a5a !important;
         transition: color 0.3s ease;
 
       }
@@ -111,39 +114,64 @@
   }
 }
 
-.language-location-container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+.account-dropdown {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 150px;
+  z-index: 100;
+  top: 40px;
+  /* Adjust based on where you want the dropdown */
+  right: 0;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.language-dropdown,
-.location-dropdown {
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
+.dropdown-item {
+  padding: 10px;
   font-size: 14px;
-  color: $white-color;
   cursor: pointer;
-  transition: color 0.3s;
+  background-color: white;
+  border-bottom: 1px solid #f2f2f2;
+}
 
-  span {
-    margin-right: 5px;
-  }
+.dropdown-item:hover {
+  background-color: #f2f2f2;
+  /* Hover effect */
+}
 
+.account-icon:hover .account-dropdown {
+  display: block;
+}
+
+.location-dropdown {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.contact-info {
   i {
-    font-size: 12px; /* Make the arrow a little smaller */
-    color: $white-color
-  }
+    cursor: pointer;
 
-  &:hover {
-    color: #FF2929; /* Color change on hover for hover effect */
+    &:hover {
+      color: $secondary-color;
+    }
   }
 }
 
-.language-dropdown:hover,
-.location-dropdown:hover {
-  color: #FF2929;  /* Optional: Highlight color when hovered */
+.p-select {
+  background-color: transparent !important;
+  border: none !important;
+}
+
+div.p-select-overlay.p-component ul {
+  background: white !important;
+}
+
+p-select-list-container {
+  background-color: white !important;
+  color: $black-color !important;
 }
 
 
