--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,7 +4,10 @@
   <div class="footer-top">
     <!-- Get to Know Us Section -->
     <div class="footer-section company-info">
-      <h4>Kalagura Gampa</h4>
+      <div class="logo-container">
+        <img src="../../../../assets/images/logo.png" alt="Kalagura Gampa Logo" class="footer-logo" />
+        <h4>Kalagura Gampa</h4>
+      </div>
       <p>Address Line 1</p>
       <p>Address Line 2</p>
       <p>Phone Number</p>
