--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="dashboard-container">
   <app-header></app-header>
+  <app-dashboard></app-dashboard>
   <app-footer></app-footer>
 </div>
