--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="header-content">
-    <div class="logo">
+    <div class="logo" (click)="redirectToHomePage()">
       <img src="../../../../assets/images/logo.png" alt="KalaguraGampa Logo" />
       <span>KalaguraGampa</span>
     </div>
