--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
 <div class="dashboard-container">
-  <app-header></app-header>
-  <app-dashboard></app-dashboard>
-  <app-footer></app-footer>
+  <div class="header-wrapper">
+    <app-header></app-header>
+  </div>
+
+  <div class="body-wrapper">
+    <router-outlet></router-outlet>
+  </div>
+
+  <div class="footer-wrapper">
+    <app-footer></app-footer>
+  </div>
 </div>
