--- a/src/app/features/product/_components/product/product.component.scss
+++ b/src/app/features/product/_components/product/product.component.scss
@@ -5,7 +5,6 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   position: relative;
-  font-family: 'Nunito', sans-serif;
   padding: 15px;
   margin: 20px;
 
@@ -29,6 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
     img {
       width: 100%;
       height: auto;
@@ -51,6 +51,7 @@
         font-size: 1.2rem;
         font-weight: bold;
         color: #333;
+        cursor: pointer;
       }
 
       .product-price {
