--- a/src/app/features/checkout/_components/checkout-details/checkout-details.component.html
+++ b/src/app/features/checkout/_components/checkout-details/checkout-details.component.html
@@ -1,1 +1,6 @@
-<p>checkout-details works!</p>
+<div class="checkout-container">
+  <div class="checkout-main">
+    <app-shipping-billing></app-shipping-billing>
+    <app-order-summary></app-order-summary>
+  </div>
+</div>
