--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -11,12 +11,13 @@
       <p>Address Line 1</p>
       <p>Address Line 2</p>
       <p>Phone Number</p>
-      <div class="payment-icons">
+      <div class="payment-icons d-flex flex-column">
         <!-- Accepted Payment Methods -->
-        <img src="assets/paypal.svg" alt="PayPal" />
-        <img src="assets/visa.svg" alt="Visa" />
+        <p>Accepted Payment Methods</p>
+        <img src="../../../../assets/images/card_payments.png" alt="Payment Methods" />
+        <!-- <img src="assets/visa.svg" alt="Visa" />
         <img src="assets/amex.svg" alt="AMEX" />
-        <img src="assets/stripe.svg" alt="Stripe" />
+        <img src="assets/stripe.svg" alt="Stripe" /> -->
       </div>
     </div>
 
