--- a/src/app/shared/components/refund-policy/refund-policy.component.scss
+++ b/src/app/shared/components/refund-policy/refund-policy.component.scss
@@ -1,11 +1,9 @@
-@import url('/src/app/shared/styles/_font.scss');
-@import url('/src/app/shared/styles/_variables.scss');
+@import '../../../../styles/_variables.scss';
 
 .refund-policy-container {
-  max-width: 1200px;
+  // max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
-  font-family: $Nunito-Regular;
 
   .title {
     font-size: 2rem;
