--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "primeicons/primeicons.css";
 
 @font-face {
   font-family: 'Nunito-Regular';
@@ -43,4 +42,5 @@ input::placeholder {
   font-family: "Nunito-Regular", sans-serif;
 }
 
-
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
