--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -63,6 +63,11 @@
       <span>Cart</span>
     </div>
   </div>
-</header>
 
-<app-login [isVisible]="isLoginDialogVisible" (closeLoginDialog)="closeLoginDialog()"></app-login>
+  <app-dialog [isVisible]="isLoginDialogVisible" [dialogTitle]="'Login'" [contentTemplate]="loginTemplate"
+    (closeDialog)="closeLoginDialog()"></app-dialog>
+
+  <ng-template #loginTemplate>
+    <app-login></app-login>
+  </ng-template>
+</header>
