--- a/src/app/features/product/_components/view-product/view-product.component.html
+++ b/src/app/features/product/_components/view-product/view-product.component.html
@@ -1,18 +1,18 @@
 <div class="product-container">
   <div class="product-image">
-    <img src="assets/images/logo.png" alt="Airpods Max" />
+    <img src="assets/images/Henna-2_2nd.jpg" alt="Henna" />
     <div class="thumbnail-container">
-      <img src="assets/images/logo.png" alt="Airpods Max Color Red" />
-      <img src="assets/images/logo.png" alt="Airpods Max Color Blue" />
-      <img src="assets/images/logo.png" alt="Airpods Max Color Black" />
+      <img src="assets/images/Henna-2_2nd.jpg" alt="Henna" />
+      <img src="assets/images/Henna-2_2nd.jpg" alt="Henna" />
+      <img src="assets/images/Henna-2_2nd.jpg" alt="Henna" />
       <!-- Add more thumbnails as needed -->
     </div>
   </div>
 
   <div class="product-details">
-    <h1>Airpods- Max</h1>
-    <p class="product-description">A perfect balance of exhilarating high-fidelity audio and the effortless magic of
-      AirPods.</p>
+    <h1>Henna</h1>
+    <p class="product-description">A perfect balance of exhilarating high-fidelity effortless magic of
+      Color.</p>
     <div class="product-rating">
       <span>⭐⭐⭐⭐⭐</span>
       <span>(121)</span>
