--- a/src/app/features/auth/_components/login/login.component.scss
+++ b/src/app/features/auth/_components/login/login.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  // height: 100vh;
   background-color: #f9f9f9;
 
   .left-section {
@@ -111,3 +111,46 @@
     }
   }
 }
+
+.login-options {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+
+  .option-button {
+    flex: 1;
+    padding: 10px;
+    font-size: 0.9rem;
+    font-weight: bold;
+    cursor: pointer;
+    background: none;
+    border: none;
+    transition: all 0.3s ease;
+    color: #999;
+
+    &.active {
+      color: #682f12;
+      border-bottom: 2px solid #682f12;
+    }
+
+    &:hover:not(.active) {
+      color: #844026;
+    }
+  }
+}
+
+.forgot-password {
+  margin: 10px 0;
+  text-align: right;
+
+  a {
+    color: #682f12;
+    text-decoration: underline;
+    cursor: pointer;
+
+    &:hover {
+      color: #844026;
+    }
+  }
+}
+
