--- a/src/app/features/product/_components/product/product.component.html
+++ b/src/app/features/product/_components/product/product.component.html
@@ -13,7 +13,7 @@
   <div class="product-details">
     <div class="product-header">
       <h4>{{ product.name }}</h4>
-      <span class="product-price">${{ product.price }}</span>
+      <span class="product-price">{{ product.price }}</span>
     </div>
     <p class="product-description">{{ product.description }}</p>
     <div class="product-rating">
