--- a/src/app/shared/components/dialog/dialog.component.html
+++ b/src/app/shared/components/dialog/dialog.component.html
@@ -1,10 +1,9 @@
 <div class="dialog-backdrop" *ngIf="isVisible">
   <div class="dialog-container" @dialogAnimation>
     <!-- Dialog Header -->
-    <!-- <div class="dialog-header">
-      <h3>{{ dialogTitle }}</h3>
+    <div class="dialog-header">
       <button class="close-button" (click)="close()">×</button>
-    </div> -->
+    </div>
 
     <!-- Dialog Content -->
     <div class="dialog-content">
