--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -6,18 +6,15 @@
     <div class="footer-section company-info">
       <div class="logo-container">
         <img src="../../../../assets/images/logo.png" alt="Kalagura Gampa Logo" class="footer-logo" />
-        <h4>Kalagura Gampa</h4>
+        <h5>Kalagura Gampa</h5>
       </div>
-      <p>Address Line 1</p>
-      <p>Address Line 2</p>
-      <p>Phone Number</p>
-      <div class="payment-icons d-flex flex-column">
-        <!-- Accepted Payment Methods -->
-        <p>Accepted Payment Methods</p>
+      <p>The smallest countryside, a beautiful childhood was my past. It is a glorious experience but remains like the
+        memory of a past life.</p>
+      <!-- <p>Address Line 2</p>
+      <p>Phone Number</p> -->
+      <div class="payment-icons">
+        <span>Accepted Payment Methods</span>
         <img src="../../../../assets/images/card_payments.png" alt="Payment Methods" />
-        <!-- <img src="assets/visa.svg" alt="Visa" />
-        <img src="assets/amex.svg" alt="AMEX" />
-        <img src="assets/stripe.svg" alt="Stripe" /> -->
       </div>
     </div>
 
@@ -26,7 +23,7 @@
       <h4>Quick Links</h4>
       <ul>
         <li><a href="#">About Us</a></li>
-        <li><a href="#">Products</a></li>
+        <!-- <li><a href="#">Products</a></li> -->
         <li><a href="#">F.A.Q's</a></li>
         <li><a href="#">Tracking Orders</a></li>
       </ul>
@@ -47,9 +44,28 @@
     <div class="footer-section">
       <h4>Stores</h4>
       <ul>
-        <li>Aziz Nagar</li>
-        <li>L.B. Nagar</li>
-        <li>Kukatpally</li>
+        <li>
+          <strong>Kukatpally</strong>
+          <p>
+            Plot No 277, Ground Floor H.No.3-6-13/2, Usha Enclave, Vivekananda Nagar, Kukatpally, Hyderabad, Telangana
+            500072
+          </p>
+          <p>Ph: +91-9063922966</p>
+        </li>
+        <li>
+          <strong>Aziz Nagar</strong>
+          <p>Chilkur Road, Beside HP Petrol Bunk, Hyderabad, Telangana, India 500075</p>
+          <p>Ph: +91-7815810496</p>
+        </li>
+        <li>
+          <strong>L.B. Nagar</strong>
+          <p>
+            Chitra Layout Main Road, Court Lane, opp. Mahatma Gandhi Law College, beside RangaReddy Dist, NTR Nagar, L.
+            B.
+            Nagar, Hyderabad, Telangana 500074
+          </p>
+          <p>Ph: +91-9281113560</p>
+        </li>
       </ul>
     </div>
   </div>
@@ -57,15 +73,23 @@
   <!-- Footer Bottom Section -->
   <div class="footer-bottom">
     <div class="footer-left">
-      <p>Copyright 2023 Kalagura Gampa (a Gayathri Enterprises) All Rights Reserved.</p>
+      <span>&copy; 2023 Kalagura Gampa (a Gayathri Enterprises). All Rights Reserved.</span>
     </div>
     <div class="footer-right">
       <div class="social-links">
-        <p>Follow us on</p>
-        <a href="https://twitter.com" target="_blank" class="social-icon"><i class="pi pi-twitter"></i></a>
-        <a href="https://facebook.com" target="_blank" class="social-icon"><i class="pi pi-facebook"></i></a>
-        <a href="https://youtube.com" target="_blank" class="social-icon"><i class="pi pi-youtube"></i></a>
-        <a href="https://instagram.com" target="_blank" class="social-icon"><i class="pi pi-instagram"></i></a>
+        <span>Follow us on</span>
+        <a href="https://facebook.com" target="_blank" class="social-icon">
+          <img src="../../../../assets/images/facebook-48.png" />
+        </a>
+        <a href="https://youtube.com" target="_blank" class="social-icon">
+          <img src="../../../../assets/images/youtube-48.png" />
+        </a>
+        <a href="https://twitter.com" target="_blank" class="social-icon">
+          <img src="../../../../assets/images/x-48.png" />
+        </a>
+        <a href="https://instagram.com" target="_blank" class="social-icon">
+          <img src="../../../../assets/images/instagram-48.png" />
+        </a>
       </div>
     </div>
   </div>
