--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -33,7 +33,7 @@
 <header class="app-header">
   <div class="logo">
     <img src="../../../../assets/images/logo.png" alt="Kalaguragampa Logo" />
-    <span class="brand-text">Kalaguragampa</span>
+    <span class="brand-text">Kalagura Gampa</span>
   </div>
 
   <div class="search-bar">
